Change wmis button source

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://cek.notion.site/Sismart-Aplikasi-LMS-sekolah-d365562698e4422b9c257a087570989c')"
+                onclick="window.open('https://cek.notion.site/WMIS-UNDP-a6fbe57b4d3049bebde4beb0db4162c5?pvs=4')"
               >
                 WMIS Project
               </button>
