--- a/index.html
+++ b/index.html
@@ -313,6 +313,14 @@
       </nav>
       <p>Copyright &#169; 2023 Hanif Rinardi. All Rights Reserved.</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js" type="module"></script>
+    <script type="module">
+        import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js";
+        Chatbot.init({
+            chatflowid: "fd8bac4f-0393-4833-b921-be0bc912194f",
+            apiHost: "http://103.127.133.46:3000",
+        });
+    </script>
+    </script>
   </body>
 </html>
